Map Reduce Fix for kryo removal.